--- a/criptotweet.ipynb
+++ b/criptotweet.ipynb
@@ -79,15 +79,15 @@
    },
    "outputs": [],
    "source": [
-    "def getTweets(query):\n",
+    "def downloadTweets(query):\n",
     "    tweets = client.search_recent_tweets(query, max_results=100)\n",
-    "    currentCRYPTOdataset = fromTweetsToDF(tweets)\n",
+    "    currentCRYPTOdataset = tweetsDataFrame(tweets)\n",
     "    print(\"Presi i tweet di \"+query)\n",
     "    print(tweets.meta)\n",
     "    for _ in range(3):\n",
     "        if 'next_token' in tweets.meta:\n",
     "            tweets = client.search_recent_tweets(query, max_results=100, next_token=tweets.meta['next_token'])\n",
-    "            df = fromTweetsToDF(tweets)\n",
+    "            df = tweetsDataFrame(tweets)\n",
     "            currentCRYPTOdataset = currentCRYPTOdataset.append(df, ignore_index=True)\n",
     "        else:\n",
     "            break\n",
@@ -96,7 +96,7 @@
     "    return currentCRYPTOdataset\n",
     "\n",
     "\n",
-    "def fromTweetsToDF(tweets):\n",
+    "def tweetsDataFrame(tweets):\n",
     "    testo = list()\n",
     "    id = list()\n",
     "   \n",
@@ -139,8 +139,8 @@
     "    try:\n",
     "        client = tw.Client(bearer_token=bearer_token, consumer_key=consumer_key, consumer_secret=consumer_secret,\n",
     "                   access_token=access_token, access_token_secret=access_token_secret)\n",
-    "        df_nome = getTweets(nome)\n",
-    "        df_abbr = getTweets(abbreviazione)\n",
+    "        df_nome = downloadTweets(nome)\n",
+    "        df_abbr = downloadTweets(abbreviazione)\n",
     "        df_unione = df_nome.append(df_abbr)\n",
     "        print('la lunghezza del dataframe di', nome, 'prima del drop è:', len(df_unione))\n",
     "    #eliminazione duplicati \n",
@@ -157,8 +157,8 @@
     "                time.sleep(15*60)\n",
     "                client = tw.Client(bearer_token=bearer_token, consumer_key=consumer_key, consumer_secret=consumer_secret,\n",
     "                   access_token=access_token, access_token_secret=access_token_secret)\n",
-    "                df_nome = getTweets(nome)\n",
-    "                df_abbr = getTweets(abbreviazione)\n",
+    "                df_nome = downloadTweets(nome)\n",
+    "                df_abbr = downloadTweets(abbreviazione)\n",
     "                df_unione = df_nome.append(df_abbr)\n",
     "                print('la lunghezza del dataframe di', nome, 'prima del drop è:', len(df_unione))\n",
     "                #eliminazione duplicati \n",
@@ -222,7 +222,6 @@
    "outputs": [],
    "source": [
     "cg = pycoingecko.CoinGeckoAPI()\n",
-    "id_list = cg.get_coins_list()\n",
     "crypto_df = pd.read_csv('cryptolist.csv')\n",
     "crypto_df = crypto_df.drop(columns='Unnamed: 0')"
    ]
@@ -234,6 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "id_list = cg.get_coins_list()\n",
     "cg_list = pd.DataFrame(id_list)"
    ]
   },
